--- a/fbsdk/index.html
+++ b/fbsdk/index.html
@@ -51,7 +51,7 @@
 		    		document.getElementById('status').innerHTML = 'You are not logged into Facebook.';
 		    	}
 			}, {
-				scope: 'user_birthday, email, user_likes, user_friends',
+				scope: 'email, user_likes, user_friends',
 				return_scopes: true
 			});
 		}
